# cydoomgeneric

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml
cydoomgeneric/: __init__.pyi  cydoomgeneric.c  cydoomgeneric.pxd  cydoomgeneric.pyi  cydoomgeneric.pyx  demo.py  democalc.py  demominepi.py  demomspaint.py  demopygame.py  demopyplot.py  setup.py
demo/: democalc.py  demominepi.py  demomspaint.py  demopygame.py  demopyplot.py
doomgeneric/: Makefile  config.h  doomgeneric.c  doomgeneric.h
