[build-system]
requires = ["setuptools", "cython", "numpy>=1.25"]
build-backend = "setuptools.build_meta"

[project]
name = "cydoomgeneric"
description = "Easily portable doom for python"
readme = "README.md"
version = "0.1.0"
authors = [
    {name = "Wojciech Graj"}
]
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.25"
]
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Cython",
]
keywords= ["doom"]

[project.urls]
homepage = "https://github.com/wojciech-graj/cydoomgeneric"

[project.optional-dependencies]
dev = [
    "pylsp-mypy",
    "pylsp-rope",
    "python-lsp-isort",
    "python-lsp-server[all]"
]
pyplot = [
    "matplotlib"
]
minepi = [
    "mcpi",
    "scikit-image"
]
mspaint = [
    "pyautogui",
    "pywinctl",
    "scikit-image"
]
pygame = [
    "pygame"
]

[tool.setuptools]
py-modules = []

[tool.pydocstyle]
ignore = ["D101", "D102", "D103", "D107", "D205", "D208", "D212", "D400", "D415"]
